// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LogsIngestionConsumer general should process a valid log message 1`] = `
[
  {
    "json-parse": "false",
    "retention-days": "14",
    "team_id": "TEAM_ID",
    "token": "<REPLACED-UUID-0>",
  },
]
`;

exports[`LogsIngestionConsumer general should process multiple log messages 1`] = `
[
  {
    "json-parse": "false",
    "retention-days": "14",
    "team_id": "TEAM_ID",
    "token": "<REPLACED-UUID-1>",
  },
  {
    "json-parse": "false",
    "retention-days": "14",
    "team_id": "TEAM_ID",
    "token": "<REPLACED-UUID-1>",
  },
  {
    "json-parse": "false",
    "retention-days": "14",
    "team_id": "TEAM_ID",
    "token": "<REPLACED-UUID-1>",
  },
]
`;

exports[`LogsIngestionConsumer message parsing and validation should overwrite existing headers 1`] = `
[
  {
    "json-parse": "false",
    "retention-days": "14",
    "team_id": "TEAM_ID",
    "token": "<REPLACED-UUID-3>",
  },
]
`;

exports[`LogsIngestionConsumer message parsing and validation should preserve kafka message headers 1`] = `
[
  {
    "json-parse": "false",
    "myHeader": "hello",
    "retention-days": "14",
    "team_id": "TEAM_ID",
    "token": "<REPLACED-UUID-2>",
  },
]
`;
